--- a/02_JavaScriptOperators/solution/index.html
+++ b/02_JavaScriptOperators/solution/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Operators</title>
+    <title>JavaScript Mike was here Operators</title>
 </head>
 <body>
-    <h1>JavaScript Operators</h1>
+    <h1>JavaScript  Mike was here Operators</h1>
 
     <script src="index.js"></script>
 </body>
