--- a/13_JavaScriptModules/lecture/index.html
+++ b/13_JavaScriptModules/lecture/index.html
@@ -19,22 +19,22 @@
 
         <div id="inputs">
             <label for="radius">Radius:</label>
-            <input type="number" id="radius" name="radius" step="any"><br>
+            <input type="number" id="radius" name="radius" step="0.1"><br>
 
             <label for="base">Base:</label>
-            <input type="number" id="base" name="base" step="any"><br>
+            <input type="number" id="base" name="base" step="0.1"><br>
 
             <label for="height">Height:</label>
-            <input type="number" id="height" name="height" step="any"><br>
+            <input type="number" id="height" name="height" step="0.1"><br>
 
             <label for="side">Side:</label>
-            <input type="number" id="side" name="side" step="any"><br>
+            <input type="number" id="side" name="side" step="0.1"><br>
 
             <label for="length">Length:</label>
-            <input type="number" id="length" name="length" step="any"><br>
+            <input type="number" id="length" name="length" step="0.1"><br>
 
             <label for="width">Width:</label>
-            <input type="number" id="width" name="width" step="any"><br>
+            <input type="number" id="width" name="width" step="0.1"><br>
         </div>
 
         <button type="button" id="calculateButton">Calculate Area</button>
